# GluedMD

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  _common.py  check_regression.py  run_suite.py  utils.py
benchmarks/ad_vacuum/: benchmark.py
benchmarks/ad_water/: benchmark.py
benchmarks/baselines/: NVIDIA_GeForce_RTX_2070_SUPER.json  NVIDIA_GeForce_RTX_2070_SUPER_multiwalker.json  NVIDIA_GeForce_RTX_2070_SUPER_pytorch.json  NVIDIA_GeForce_RTX_2070_SUPER_solvated.json
benchmarks/kor_a100/: 01_minimize_equilibrate.py  03_production_glued.py  README.md  benchmark.py
benchmarks/kor_deepcv_large/: README.md  benchmark.py
benchmarks/kor_deepcv_small/: benchmark.py  deepcv.pt
benchmarks/kv12_s4/: 01_minimize_equilibrate.py  03_production_glued.py  README.md  benchmark.py
benchmarks/results/: ad_vacuum.json  ad_water.json  suite.json
docs/: architecture-notes.md  bias_methods.md  collective_variables.md  examples.md  index.md  installation.md  multi_gpu.md  python_api.md
openmmapi/include/: GluedForce.h  GluedKernels.h
openmmapi/include/internal/: GluedForceImpl.h  windowsExportGlued.h
openmmapi/src/: GluedForce.cpp  GluedForceImpl.cpp
python/: CMakeLists.txt  COLVARReporter.py  MultiGPUManager.py  OPESConvergenceReporter.py  ReplicaExchange.py  glued.py  gluedplugin.i  setup.py
scripts/: run_tests.sh
serialization/include/: GluedForceProxy.h
serialization/src/: GluedForceProxy.cpp  GluedSerializationProxyRegistration.cpp
tests/: CMakeLists.txt  conftest.py  test_adp_multithermal.py  test_api_smoke.py  test_bias_abmd.py  test_bias_eds.py  test_bias_ext_lagrangian.py  test_bias_external.py  test_bias_harmonic.py  test_bias_linear.py  test_bias_maxent.py  test_bias_metad.py  test_bias_moving_restraint.py  test_bias_multithermal.py  test_bias_opes.py  test_bias_opes_expanded.py  test_bias_pbmetad.py  test_bias_state_serialization.py  test_bias_walls.py  test_cv_angle_dihedral.py  test_cv_com_rg.py  test_cv_contactmap.py  test_cv_coordination.py  test_cv_dipole.py  test_cv_distance.py  test_cv_drmsd.py  test_cv_energy.py  test_cv_energy_vsite.py  test_cv_ermsd.py  test_cv_expression.py  test_cv_path.py  test_cv_pca.py  test_cv_plane.py  test_cv_position.py  test_cv_projection.py  test_cv_puckering.py  test_cv_pytorch.py  test_cv_query_and_reporter.py  test_cv_rmsd.py  test_cv_secondary_structure.py  (+9 more)
tools/: gen_secstr_templates.py
